# M2GICAO

S1/SIM/gratin-v0.3.1/: CMakeLists.txt
S1/SIM/gratin-v0.3.1/build-maison/: CMakeCache.txt  Makefile  cmake_install.cmake  gratin  libgratin.so.0  libgratin.so.0.3.1
S1/SIM/gratin-v0.3.1/build-maison/data/: README.txt
S1/SIM/gratin-v0.3.1/build-maison/data/imgs/: horseshoe-lake.exr
S1/SIM/gratin-v0.3.1/build-maison/data/pipes/: animate.gra  color-conversion.gra  laplacian-pyramid.gra  renderings.gra
S1/SIM/gratin-v0.3.1/build-maison/lastinstall/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/build-maison/nodes/custom/: 3DGradientNoiseID1.grac  RGB2HSVID1.grac  RGB2LAlphaBetaID1.grac  addColorsID1.grac  displacementMappingID1.grac  globalMaxColorID1.grac  globalMinColorID1.grac  globalVarianceColorID1.grac  imageGradientID1.grac  jointHistogramID1.grac  lambertianShadingID1.grac  laplacianCollapseID1.grac  lineIntegralConvID1.grac  litsphereShadingID1.grac  mixColorID1.grac  multiplyColorsID1.grac  phongShadingID1.grac
S1/SIM/gratin-v0.3.1/build-maison/src-gratin/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/build-maison/src-gratin/core/: moc_pbgraph.cpp  moc_pbgraph.cpp_parameters  moc_textureIO.cpp  moc_textureIO.cpp_parameters
S1/SIM/gratin-v0.3.1/build-maison/src-gratin/main/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/build-maison/src-gratin/misc/: moc_glwindow.cpp  moc_glwindow.cpp_parameters  moc_trackballCamera.cpp  moc_trackballCamera.cpp_parameters
S1/SIM/gratin-v0.3.1/build-maison/src-gratin/view/: moc_animationWidget.cpp  moc_animationWidget.cpp_parameters  moc_customNodeWidget.cpp  moc_customNodeWidget.cpp_parameters  moc_graphWidget.cpp  moc_graphWidget.cpp_parameters  moc_helpWidget.cpp  moc_helpWidget.cpp_parameters  moc_interactionWidget.cpp  moc_interactionWidget.cpp_parameters  moc_logWidget.cpp  moc_logWidget.cpp_parameters  moc_mainWindow.cpp  moc_mainWindow.cpp_parameters  moc_nodeInterfaceContainer.cpp  moc_nodeInterfaceContainer.cpp_parameters  moc_nodeInterfaceWidget.cpp  moc_nodeInterfaceWidget.cpp_parameters  moc_nodeListWidget.cpp  moc_nodeListWidget.cpp_parameters  moc_timelineWidget.cpp  moc_timelineWidget.cpp_parameters  moc_widgetParams.cpp  moc_widgetParams.cpp_parameters
S1/SIM/gratin-v0.3.1/build-maison/src-nodes/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/build-maison/src-nodes/genericNodes/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/build-maison/src-nodes/pluginNodes/: Makefile  cmake_install.cmake
S1/SIM/gratin-v0.3.1/cmake/: FindOpenEXR.cmake  gratin.conf.in
S1/SIM/gratin-v0.3.1/data/imgs/: crete-seashore.exr
S1/SIM/gratin-v0.3.1/data/pipes/: displacement-mapping.gra  flow-visualization.gra  fourier-transform.gra  global-values.gra  image-operators.gra
S1/SIM/gratin-v0.3.1/lastinstall/: CMakeLists.txt
S1/SIM/gratin-v0.3.1/nodes/custom/: 2DGradientNoiseID1.grac  2DValueNoiseID1.grac  3DValueNoiseID1.grac  HSV2RGBID1.grac  LAlphaBeta2RGBID1.grac  PNTrianglesID1.grac  bilinearColorMapID1.grac  checkerboardID1.grac  displayCurveID1.grac  divideColorsID1.grac  gaussianPyramidID1.grac  globalMeanColorID1.grac  laplacianCreateID1.grac  maxColorID1.grac  normalMappingID1.grac  pseudoRandomID1.grac  rollingGuidedFilterID1.grac  singleObjLoaderId1.grac  substractColorsID1.grac  tmoMeanStdID1.grac  tmoMinMaxID1.grac  xtoonShadingID1.grac
S1/SIM/gratin-v0.3.1/resources/: gratin.icns
S1/SIM/gratin-v0.3.1/resources/config/: gratin.css
S1/SIM/gratin-v0.3.1/resources/shaders/: line.frag  line.vert  node-style.frag  node-style.vert  node-tex-content.vert  point.frag  point.vert  text.frag
S1/SIM/gratin-v0.3.1/src-gratin/: CMakeLists.txt  src.qrc
S1/SIM/gratin-v0.3.1/src-gratin/core/: animation.h  curve.cpp  curve.h  keyframedParams.cpp  keyframedParams.h  nodeGrouped.cpp  nodeGrouped.h  nodeHandle.h  nodeInterface.cpp  nodeInterface.h  nodeManager.cpp  nodeManager.h  nodeTexture2D.cpp  nodeTexture2D.h  pbgraph.cpp  pbgraph.h  sceneIOTags.cpp  sceneIOTags.h  sceneLoader.cpp  sceneLoader.h  sceneSaver.cpp  sceneSaver.h  textureIO.cpp  textureIO.h
S1/SIM/gratin-v0.3.1/src-gratin/main/: CMakeLists.txt  main.cpp
S1/SIM/gratin-v0.3.1/src-gratin/misc/: extinclude.h  framebufferObject.cpp  framebufferObject.h  glcontext.cpp  glcontext.h  glutils.h  glwindow.h  gpuProgram.cpp  gpuProgram.h  gpuShader.cpp  gpuShader.h  mesh.cpp  mesh.h  objLoader.cpp  objLoader.h  textDrawer.cpp  textDrawer.h  texture1D.h  texture2D.h  texture3D.h  textureFormat.cpp  textureFormat.h  trackballCamera.cpp  trackballCamera.h  vertexarrayObject.h
S1/SIM/gratin-v0.3.1/src-gratin/view/: animationWidget.cpp  animationWidget.h  customNodeWidget.cpp  customNodeWidget.h  graphWidget.cpp  graphWidget.h  helpWidget.cpp  helpWidget.h  interactionWidget.cpp  interactionWidget.h  logWidget.cpp  logWidget.h  mainWindow.cpp  mainWindow.h  nodeInterfaceContainer.cpp  nodeInterfaceContainer.h  nodeInterfaceWidget.cpp  nodeInterfaceWidget.h  nodeListWidget.cpp  nodeListWidget.h  nodeWidget.cpp  nodeWidget.h  timelineItems.cpp  timelineItems.h  timelineWidget.cpp  timelineWidget.h  widgetParams.cpp  widgetParams.h
S1/SIM/gratin-v0.3.1/src-nodes/: CMakeLists.txt
S1/SIM/gratin-v0.3.1/src-nodes/genericNodes/customNodeFiles/: codeEditor.cpp  codeEditor.h  genericCustomNode.cpp  genericCustomNode.h  genericCustomWidget.cpp  genericCustomWidget.h  genericSettings.cpp  genericSettings.h
S1/SIM/gratin-v0.3.1/src-nodes/genericNodes/gbuffersCustom/: CMakeLists.txt  (+2 more)
S1/SIM/gratin-v0.3.1/src-nodes/pluginNodes/: CMakeLists.txt
(+735 files in other folders)
